# skywalker_artifact

./: .gitmodules  CMakeLists.txt  README.md
result/: fig8_biased.csv  offline.csv  online.csv  spec.csv  static.csv  table3_unbiased.csv  unbiased.csv  unbiased1.csv  with_nextdoor.csv
scripts/: fig8_biased.sh  knightking_prepare_data.sh  speculative.sh  table3_unbiased.sh
src/: online_walk.cu
